# cool-python-exercises

./: .gitignore  pyproject.toml  requirements.txt
cool_scripts/: main.py
cool_scripts/apps/color_detection/: app.py  spec.txt
tasks/: poetry_scripts.py  task_example.py
tests/: test_cool_scripts.py
