[tool.poetry]
name = "cool-scripts"
version = "0.1.0"
description = ""
authors = ["Italo Fontes <italo5123@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
simple-term-menu = "^0.4.6"

[tool.poetry.scripts]
my-script = "tasks.task_example:test"
start-app = "cool_scripts.main:start_app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
