[tool.poetry]
name = "cool-scripts"
version = "0.1.0"
description = ""
authors = ["Tim Fontes"]

[tool.poetry.dependencies]
python = "^3.8"
simple-term-menu = "^0.4.6"
mypy = "^0.780"

[tool.poetry.scripts]
my-script = "tasks.task_example:test"
start = "cool_scripts.main:start_app"
generate-requirements = "tasks.poetry_scripts:generate_requirements"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
